fix opacity of book covers

--- a/static/css/components/search-result-item.less
+++ b/static/css/components/search-result-item.less
@@ -76,7 +76,6 @@
   }
   .preview-covers img {
     border-radius: 4px;
-    opacity: .7;
   }
   .preview-covers--blur {
     img {
@@ -128,7 +127,6 @@
 }
 
 .preview-covers img:hover {
-  opacity: 1;
   z-index: 4;
 }
 
